refactor: refactor get all evidences by report id controller